--- a/eventcalendar/templates/calendar.html
+++ b/eventcalendar/templates/calendar.html
@@ -222,29 +222,29 @@
         },
         editable: true,
         dayMaxEvents: true, // allow "more" link when too many events
-       //events: {{ events|safe }}
+       events: {{ events|safe }}
         //events: 'en.new_zealand#holiday@group.v.calendar.google.com' // {{ events|safe}} 
-        events: [
-          {
-            title: 'All Day Event',
-            start: '2024-01-26'
-          },
-          {
-            groupId: 999,
-            title: 'Repeating Event',
-            start: '2024-01-16T16:00:00'
-          },
-          {
-            title: 'Conference',
-            start: '2024-01-11',
-            end: '2024-01-13'
-          },
-          {
-            title: 'Click for Google',
-            url: 'http://google.com/',
-            start: '2024-01-28'
-          }
-        ]
+        // events: [
+        //   {
+        //     title: 'All Day Event',
+        //     start: '2024-01-26'
+        //   },
+        //   {
+        //     groupId: 999,
+        //     title: 'Repeating Event',
+        //     start: '2024-01-16T16:00:00'
+        //   },
+        //   {
+        //     title: 'Conference',
+        //     start: '2024-01-11',
+        //     end: '2024-01-13'
+        //   },
+        //   {
+        //     title: 'Click for Google',
+        //     url: 'http://google.com/',
+        //     start: '2024-01-28'
+        //   }
+        // ]
       });
       calendar.render();
 
