--- a/eventcalendar/templates/calendar.html
+++ b/eventcalendar/templates/calendar.html
@@ -137,163 +137,209 @@
 
 {% block extrascripts %}
 <script src="{% static 'calendar/main.js' %}"></script>
+
+
 <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.10/index.global.min.js'></script>
-<script>
-    
-  function converterDataParaDjangoFormat(data) {
-      const dataJS = new Date(data);
-      const year = dataJS.getFullYear();
-      const month = (dataJS.getMonth() + 1).toString().padStart(2, '0');
-      const day = dataJS.getDate().toString().padStart(2, '0');
-      const hour = dataJS.getHours().toString().padStart(2, '0');
-      const minute = dataJS.getMinutes().toString().padStart(2, '0');
-      const second = dataJS.getSeconds().toString().padStart(2, '0');
-      const formatoDjango = `${year}-${month}-${day} ${hour}:${minute}:${second}`;
-      return formatoDjango;
-  }
-    document.addEventListener('DOMContentLoaded', function() {
-      //var initialLocaleCode = 'en';
-      var localeSelectorEl = document.getElementById('locale-selector');
-      var calendarEl = document.getElementById('calendar');
-      var today = new Date();
 
-      var calendar = new FullCalendar.Calendar(calendarEl, {
-        headerToolbar: {
-          left: 'prev,next today',
-          center: 'title',
-          right: 'multiMonthYear, dayGridMonth,timeGridWeek,timeGridDay,list'
-
-        },
-        //locale: initialLocaleCode,
-        initialDate: today,
-        navLinks: true, // can click day/week names to navigate views
-        selectable: true,
-        selectMirror: true,
-        select: function(arg) {
-          console.log('clicked')
-          console.log(arg.start)
-          console.log(arg.end)
-          var modal = document.getElementById('eventModal')
-          modal.style.display = 'block'
-          document.getElementById('id_start_time').value = converterDataParaDjangoFormat(arg.start);
-          document.getElementById('id_end_time').value = converterDataParaDjangoFormat(arg.end);
-          calendar.unselect()
-        },
-        
-        // THIS KEY WON'T WORK IN PRODUCTION!!!
-        // To make your own Google API key, follow the directions here:
-        // http://fullcalendar.io/docs/google_calendar/
-        //googleCalendarApiKey: '',
-
-        // bangladesh Holidays
-        // events: 'bn.bd#holiday@group.v.calendar.google.com',
-        eventClick: function(arg) {
-          
-          console.log('clicked')
-          var title = arg.event.title;
-          var start = formatDateTime(arg.event.start) ;
-          var end = formatDateTime(arg.event.end);
-          var description = arg.event.extendedProps.description || '';
-          var id = arg.event.id;
-
-          var modalInputEnd = document.getElementById('end_event_detail'); 
-
-          var modal = document.getElementById('detailModal')
-          var modalTitle = document.getElementById('title_event_detail'); 
-          var modalStart = document.getElementById('start_event_detail'); 
-          var modalEnd = document.getElementById('end_event_detail'); 
-          var modalDescripition = document.getElementById('description_event_detail'); 
-          var deleteButton = document.getElementById("delete-event-button");
-          var nextWeek = document.getElementById("add-to-next-week");
-          var nextDay = document.getElementById("add-to-next-day");
-
-          deleteButton.setAttribute("data-event-id", id);
-          nextWeek.setAttribute("data-event-id-week", id);
-          nextDay.setAttribute("data-event-id-day", id);
-          modal.style.display = 'block' 
-          
-          modalTitle.textContent = title;
-          modalStart.textContent = start;
-          modalEnd.textContent = end;
-          modalDescripition.textContent = description;
-          
-         
-          modal.style.display = 'block';
-        },
-        editable: true,
-        dayMaxEvents: true, // allow "more" link when too many events
-       events: {{ events|safe }}
-        //events: 'en.new_zealand#holiday@group.v.calendar.google.com' // {{ events|safe}} 
-        // events: [
-        //   {
-        //     title: 'All Day Event',
-        //     start: '2024-01-26'
-        //   },
-        //   {
-        //     groupId: 999,
-        //     title: 'Repeating Event',
-        //     start: '2024-01-16T16:00:00'
-        //   },
-        //   {
-        //     title: 'Conference',
-        //     start: '2024-01-11',
-        //     end: '2024-01-13'
-        //   },
-        //   {
-        //     title: 'Click for Google',
-        //     url: 'http://google.com/',
-        //     start: '2024-01-28'
-        //   }
-        // ]
-      });
-      calendar.render();
-
-      console.log('code...', calendar.getAvailableLocaleCodes());
-      
-      // build the locale selector's options
-
-  calendar.getAvailableLocaleCodes().forEach(function(localeCode) {
-    console.log('some locale ' + localeCode)
-    var optionEl = document.createElement('option');
-    optionEl.value = localeCode;
-    //optionEl.selected = localeCode == initialLocaleCode;
-    optionEl.innerText = localeCode;
-    localeSelectorEl.appendChild(optionEl);
-  });
-
-  // when the selected option changes, dynamically change the calendar option
-  localeSelectorEl.addEventListener('change', function() {
-    if (this.value) {
-      calendar.setOption('locale', this.value);
+<script src="{% static 'calendar/locales-all.js' %}"></script>
+<script src="{% static 'calendar/calendar.js' %}"></script>
+<script>var globalLocale = 'en';
+    function converterDataParaDjangoFormat(data) {
+        const dataJS = new Date(data);
+        const year = dataJS.getFullYear();
+        const month = (dataJS.getMonth() + 1).toString().padStart(2, '0');
+        const day = dataJS.getDate().toString().padStart(2, '0');
+        const hour = dataJS.getHours().toString().padStart(2, '0');
+        const minute = dataJS.getMinutes().toString().padStart(2, '0');
+        const second = dataJS.getSeconds().toString().padStart(2, '0');
+        const formatoDjango = `${year}-${month}-${day} ${hour}:${minute}:${second}`;
+        return formatoDjango;
     }
-  });
+      document.addEventListener('DOMContentLoaded', function() {
+        var locales = [ 'en', 'af', 'es', 'fr', 'pt-br', 'sw' ];
+        var initialLocaleCode = 'en';
+        var localeSelectorEl = document.getElementById('locale-selector');
+        var calendarEl = document.getElementById('calendar');
+        var today = new Date();
+    
+        var calendar = new FullCalendar.Calendar(calendarEl, {
+          headerToolbar: {
+            left: 'prev,next today',
+            center: 'title',
+            right: 'dayGridMonth,timeGridWeek,timeGridDay,list'
+    
+          },
+          locale: initialLocaleCode,
+          initialDate: today,
+          navLinks: true, // can click day/week names to navigate views
+          selectable: true,
+          selectMirror: true,
+          select: function(arg) {
+            console.log('clicked')
+            console.log(arg.start)
+            console.log(arg.end)
+            var modal = document.getElementById('eventModal')
+            modal.style.display = 'block'
+            document.getElementById('id_start_time').value = converterDataParaDjangoFormat(arg.start);
+            document.getElementById('id_end_time').value = converterDataParaDjangoFormat(arg.end);
+            calendar.unselect()
+          },
+          
+          // THIS KEY WON'T WORK IN PRODUCTION!!!
+          // To make your own Google API key, follow the directions here:
+          // http://fullcalendar.io/docs/google_calendar/
+          //googleCalendarApiKey: '',
+    
+          // bangladesh Holidays
+          // events: 'bn.bd#holiday@group.v.calendar.google.com',
+          eventClick: function(arg) {
+            
+            console.log('clicked')
+            var title = arg.event.title;
+            var start = formatDateTime(arg.event.start) ;
+            var end = formatDateTime(arg.event.end);
+            var description = arg.event.extendedProps.description || '';
+            var id = arg.event.id;
+    
+            var modalInputEnd = document.getElementById('end_event_detail'); 
+    
+            var modal = document.getElementById('detailModal')
+            var modalTitle = document.getElementById('title_event_detail'); 
+            var modalStart = document.getElementById('start_event_detail'); 
+            var modalEnd = document.getElementById('end_event_detail'); 
+            var modalDescripition = document.getElementById('description_event_detail'); 
+            var deleteButton = document.getElementById("delete-event-button");
+            var nextWeek = document.getElementById("add-to-next-week");
+            var nextDay = document.getElementById("add-to-next-day");
+    
+            deleteButton.setAttribute("data-event-id", id);
+            nextWeek.setAttribute("data-event-id-week", id);
+            nextDay.setAttribute("data-event-id-day", id);
+            modal.style.display = 'block' 
+            
+            modalTitle.textContent = title;
+            modalStart.textContent = start;
+            modalEnd.textContent = end;
+            modalDescripition.textContent = description;
+            
+           
+            modal.style.display = 'block';
+          },
+          editable: true,
+          dayMaxEvents: true, // allow "more" link when too many events
+         events: {{ events | safe}}
+          //events: 'en.new_zealand#holiday@group.v.calendar.google.com' // {{ events|safe}} 
+        //   events: [
+        //     {
+        //       title: 'All Day Event',
+        //       start: '2024-01-26'
+        //     },
+        //     {
+        //       groupId: 999,
+        //       title: 'Repeating Event',
+        //       start: '2024-01-16T16:00:00'
+        //     },
+        //     {
+        //       title: 'Conference',
+        //       start: '2024-01-11',
+        //       end: '2024-01-13'
+        //     },
+        //     {
+        //       title: 'Click for Google',
+        //       url: 'http://google.com/',
+        //       start: '2024-01-28'
+        //     }
+        //   ]
+        });
+        calendar.render();
+        
+        // build the locale selector's options > see https://fullcalendar.io/docs/locale-demo
+    
+    //calendar.getAvailableLocaleCodes().
+    locales.forEach(function(localeCode) {
+      var optionEl = document.createElement('option');
+      optionEl.value = localeCode;
+      optionEl.selected = localeCode == initialLocaleCode;
+      optionEl.innerText = localeCode;
+      localeSelectorEl.appendChild(optionEl);
     });
-
-    const closeBtn1 = document.getElementById('modalClose1');
-    const closeBtn2 = document.getElementById('modalClose2');
-    const closeBtn3 = document.getElementById('modalDetailClose');
-    closeBtn1.addEventListener('click',()=>{
-      const eventModal = document.getElementById('eventModal')
-      eventModal.style.display = 'none';
+    
+    // when the selected option changes, dynamically change the calendar option
+    localeSelectorEl.addEventListener('change', function() {
+      if (this.value) {
+        globalLocale = this.value;
+        calendar.setOption('locale', this.value);
+      }
     });
-    closeBtn2.addEventListener('click',()=>{
-      const eventModal = document.getElementById('eventModal')
-      eventModal.style.display = 'none';
+      });
+    
+      const closeBtn1 = document.getElementById('modalClose1');
+      const closeBtn2 = document.getElementById('modalClose2');
+      const closeBtn3 = document.getElementById('modalDetailClose');
+      closeBtn1.addEventListener('click',()=>{
+        const eventModal = document.getElementById('eventModal')
+        eventModal.style.display = 'none';
+      });
+      closeBtn2.addEventListener('click',()=>{
+        const eventModal = document.getElementById('eventModal')
+        eventModal.style.display = 'none';
+      });
+      closeBtn3.addEventListener('click',()=>{
+        const eventModal = document.getElementById('detailModal')
+        eventModal.style.display = 'none';
+      });
+    
+      function formatDateTime(dateTime) {
+        const options = { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric', hour: '2-digit', minute: '2-digit', second: '2-digit', timeZoneName: 'short' };
+        const dataFormatada = new Date(dateTime).toLocaleDateString(globalLocale, options);
+        return dataFormatada;
+      };
+    
+      document.getElementById('delete-event-button').addEventListener('click', function() {
+        const eventId = this.getAttribute('data-event-id');
+        if (confirm('Are you sure you want to delete this event?')) {
+            $.ajax({
+                url: `/delete_event/${eventId}/`,
+                type: 'POST',
+                data: {
+                    csrfmiddlewaretoken: '{{ csrf_token }}',
+                },
+                success: function(response) {
+                    alert(response.message);
+                    window.location.reload();
+                },
+                error: function(xhr, status, error) {
+                    alert('Error!');
+                }
+            
+            });
+        }});
+        
+        document.getElementById('add-to-next-week').addEventListener('click', function() {
+            const eventId = this.getAttribute('data-event-id-week');
+            if (confirm('Are you sure you want add this event to next week?')) {
+                $.ajax({
+                  url: `/next_week/${eventId}/`,
+                    type: 'POST',
+                    data: {
+                        csrfmiddlewaretoken: '{{ csrf_token }}',
+                    },
+                    success: function(response) {
+                        alert(response.message);
+                        window.location.reload();
+                    },
+                    error: function(xhr, status, error) {
+                        alert('Error!');
+                    }
+                });
+            }
     });
-    closeBtn3.addEventListener('click',()=>{
-      const eventModal = document.getElementById('detailModal')
-      eventModal.style.display = 'none';
-    });
-    function formatDateTime(dateTime) {
-      const options = { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric', hour: '2-digit', minute: '2-digit', second: '2-digit', timeZoneName: 'short' };
-      const dataFormatada = new Date(dateTime).toLocaleDateString('pt-BR', options);
-      return dataFormatada;
-    };
-    document.getElementById('delete-event-button').addEventListener('click', function() {
-      const eventId = this.getAttribute('data-event-id');
-      if (confirm('Are you sure you want to delete this event?')) {
+    
+    document.getElementById('add-to-next-day').addEventListener('click', function() {
+      const eventId = this.getAttribute('data-event-id-day');
+      if (confirm('Are you sure you want add this event to next day?')) {
           $.ajax({
-              url: `/delete_event/${eventId}/`,
+            url: `/next_day/${eventId}/`,
               type: 'POST',
               data: {
                   csrfmiddlewaretoken: '{{ csrf_token }}',
@@ -305,51 +351,9 @@
               error: function(xhr, status, error) {
                   alert('Error!');
               }
-          
           });
-      }});
-      
-      document.getElementById('add-to-next-week').addEventListener('click', function() {
-          const eventId = this.getAttribute('data-event-id-week');
-          if (confirm('Are you sure you want add this event to next week?')) {
-              $.ajax({
-                url: `/next_week/${eventId}/`,
-                  type: 'POST',
-                  data: {
-                      csrfmiddlewaretoken: '{{ csrf_token }}',
-                  },
-                  success: function(response) {
-                      alert(response.message);
-                      window.location.reload();
-                  },
-                  error: function(xhr, status, error) {
-                      alert('Error!');
-                  }
-              });
-          }
-  });
-
-  document.getElementById('add-to-next-day').addEventListener('click', function() {
-    const eventId = this.getAttribute('data-event-id-day');
-    if (confirm('Are you sure you want add this event to next day?')) {
-        $.ajax({
-          url: `/next_day/${eventId}/`,
-            type: 'POST',
-            data: {
-                csrfmiddlewaretoken: '{{ csrf_token }}',
-            },
-            success: function(response) {
-                alert(response.message);
-                window.location.reload();
-            },
-            error: function(xhr, status, error) {
-                alert('Error!');
-            }
-        });
-    }
-});
-
-</script>
+      }
+    });</script>
 {% endblock extrascripts %}
 
 
