--- a/eventcalendar/templates/calendar.html
+++ b/eventcalendar/templates/calendar.html
@@ -10,17 +10,6 @@
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
 {% endblock extracss %}
 
-<!-- {% block breadcrumb %}
-  <div>
-      <h1><i class="fa fa-calendar"></i> Calendar</h1>
-      <p>Event Calendar</p>
-  </div>
-  <ul class="app-breadcrumb breadcrumb">
-      <li class="breadcrumb-item"><i class="fa fa-home fa-lg"></i></li>
-      <li class="breadcrumb-item"><a href="#">Calendar</a></li>
-  </ul>
-{% endblock breadcrumb %} -->
-
 {% block content %}
 
   
@@ -39,7 +28,7 @@
                     <h4 class="mb-4">Running Events</h4>
                     {% for event in events_month %}
                       <div class="fc-event">
-                          <h3>{{ event.title }}</h3>
+                          <h3>{{ event.country.flag }} {{ event.country.name }} : {{ event.title }}</h3>
                           <p>{{ event.description }}</p>
                           <p>{{event.id}}</p>
                           <p>From: {{ event.start_time }}</p>
@@ -142,8 +131,8 @@
 <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.10/index.global.min.js'></script>
 
 <script src="{% static 'calendar/locales-all.js' %}"></script>
-<script src="{% static 'calendar/calendar.js' %}"></script>
-<script>var globalLocale = 'en';
+<script>
+var globalLocale = 'en';
     function converterDataParaDjangoFormat(data) {
         const dataJS = new Date(data);
         const year = dataJS.getFullYear();
