--- a/static/styles/app.css
+++ b/static/styles/app.css
@@ -11,7 +11,7 @@
 }
 
 img {
-  width: 100%;
+  width: 25%;
 }
 
 .tag > i.im {
@@ -71,6 +71,10 @@ img {
 }
 
 .project--thumbnail {
+  height: 250px;
+  object-fit: cover;
+}
+.party--thumbnail {
   height: 250px;
   object-fit: cover;
 }
