--- a/policies/templates/policies/single-policy.html
+++ b/policies/templates/policies/single-policy.html
@@ -35,8 +35,8 @@
             </div>
             <div class="column column--2of3">
                 <img class="singlePolicy__preview" src="{{ policy.imageURL }}" alt="portfolio thumbnail" />
-                <a href="{% url 'user-profile' policy.owner.id  %}"
-                    class="singlePolicy__developer">{{policy.owner.name}}</a>
+                <!-- <a href="#"
+                    class="singlePolicy__developer">{{policy.imageURL}}</a> -->
                 <h2 class="singlePolicy__title">{{policy.name}}</h2>
                 <h3 class="singlePolicy__subtitle">About the Policy</h3>
                 <div class="singlePolicy__info">
