--- a/static/uikit/styles/modules/_variables.css
+++ b/static/uikit/styles/modules/_variables.css
@@ -8,7 +8,7 @@
   --color-gray: #8b8b8b;
   --color-light: #e5e7eb;
   --color-light-gray: #767676;
-  --color-bg: #f8fafd;
+  --color-bg: #472c75;
   --color-white: #fffefd;
   --color-white-light: #f3f3f3;
   --color-success: #359e64;
