--- a/static/calendar/style.css
+++ b/static/calendar/style.css
@@ -66,9 +66,9 @@ body {
   font-size: 0.875rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #212529;
+  color:var(--color-white);
   text-align: left;
-  background-color: #FFF;
+  background-color: var(--color-bg);
 }
 
 [tabindex="-1"]:focus {
@@ -13791,7 +13791,7 @@ temporary rendered events).
   line-height: 1.3;
   border-radius: 3px;
   border: 1px solid #009688;
-  background-color: #009688;
+  background-color: var(--color-bg);
   font-weight: normal;
   /* undo jqui's ui-widget-header bold */
   margin-bottom: 5px;
@@ -15530,7 +15530,7 @@ be a descendant of the grid when it is being dragged.
 
 .tile {
   position: relative;
-  background: #ffffff;
+  background: var(--color-bg);
   border-radius: 3px;
   padding: 20px;
   -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
