--- a/static/uikit/styles/modules/_card.css
+++ b/static/uikit/styles/modules/_card.css
@@ -1,7 +1,7 @@
 .card {
   border-radius: 1rem;
-  background-color: var(--color-white);
-  border: 1.5px solid var(--color-light);
+  background-color: var(--color-bg);
+  border: 1.5px solid var(--color-bg);
   width: auto;
   height: auto;
   margin-top: 0.5rem;
