--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,25 +1,42 @@
 {% load static %}
 <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-    .dropdown {
-      position: relative;
-      display: inline-block;
-    }
-    
-    .dropdown-content {
-      display: none;
-      position: absolute;
-      background-color: #f9f9f9;
-      min-width: 160px;
-      box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-      padding: 12px 16px;
-      z-index: 1;
-    }
-    
-    .dropdown:hover .dropdown-content {
-      display: block;
-    }
-    </style>
+.dropbtn {
+  background-color: #04AA6D;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {background-color: #ddd;}
+
+.dropdown:hover .dropdown-content {display: block;}
+
+.dropdown:hover .dropbtn {background-color: #3e8e41;}
+</style>
 
 <!-- Header Section -->
 <header class="header">
@@ -39,7 +56,15 @@
                
                 <!-- <li class="header__menuItem"><a href="{% url 'profiles' %}">Candidates</a></li>
                 <li class="header__menuItem"><a href="{% url 'projects' %}">Programs</a></li>  -->
-                <li class="header__menuItem"><a href="{% url 'calendar' %}">Events</a></li>
+                <!-- <li class="header__menuItem"><a href="{% url 'calendar' %}">Events</a></li> -->
+                <div class="dropdown">
+                    <span><i class="fa fa-user fa-calendar"></i> Events</span>
+                    <div class="dropdown-content">
+                        <a href="{% url 'calendar' %}">Elections</a>
+                        <a href="{% url 'calendar' %}">Campaigns</a>
+                        <a href="{% url 'calendar' %}">Other</a>
+                    </div>
+                  </div>
 
                
                 <li class="header__menuItem"><a href="{% url 'forum' %}">Forum</a></li>
