--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -66,6 +66,18 @@
                     </div>
                   </div>
 
+                  <div class="dropdown">
+                    <span><i class="fa fa-user fa-world"></i> Diaspora</span>
+                    <div class="dropdown-content">
+                        <a href="{% url 'placeholder' %}">Connect</a>
+                        <a href="{% url 'placeholder' %}">Invest in Africa</a>
+                        <a href="{% url 'placeholder' %}">Jobs in Africa</a>
+                        <a href="{% url 'placeholder' %}">Homes in Africa</a>
+                        <a href="{% url 'placeholder' %}">Study Overseas</a>
+                        <a href="{% url 'placeholder' %}">Work Abroad</a>
+                    </div>
+                  </div>
+
                
                 <li class="header__menuItem"><a href="{% url 'forum' %}">Forum</a></li>
 
