--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -78,6 +78,28 @@
                     </div>
                   </div>
 
+                  <div class="dropdown">
+                    <span><i class="fa fa-user fa-world"></i> Partners</span>
+                    <div class="dropdown-content">
+                        <a href="{% url 'placeholder' %}">Friends of the Congo</a>
+                        <a href="{% url 'placeholder' %}">African Diasporta</a>
+                        <a href="{% url 'placeholder' %}">Real South Africa</a>
+                        <a href="{% url 'placeholder' %}">China-Africa</a>
+                        <a href="{% url 'placeholder' %}">Sankara Foundation</a>
+                        <a href="{% url 'placeholder' %}">Africans Down Under</a>
+                    </div>
+                  </div>
+
+                  <div class="dropdown">
+                    <span><i class="fa fa-user fa-world"></i> Get Involved</span>
+                    <div class="dropdown-content">
+                        <a href="{% url 'placeholder' %}">African Campaigns</a>
+                        <a href="{% url 'placeholder' %}">African Internships</a>
+                        <a href="{% url 'placeholder' %}">Donate to a Cause</a>
+                        <a href="{% url 'placeholder' %}">Volunteer for a Cause</a>
+                    </div>
+                  </div>
+
                
                 <li class="header__menuItem"><a href="{% url 'forum' %}">Forum</a></li>
 
