--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -97,6 +97,7 @@
                         <a href="{% url 'placeholder' %}">African Internships</a>
                         <a href="{% url 'placeholder' %}">Donate to a Cause</a>
                         <a href="{% url 'placeholder' %}">Volunteer for a Cause</a>
+                        <a href="{% url 'placeholder' %}">Write With Us</a>
                     </div>
                   </div>
 
