show calendar to logged out users

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -98,6 +98,7 @@
                         <a href="{% url 'placeholder' %}">Donate to a Cause</a>
                         <a href="{% url 'placeholder' %}">Volunteer for a Cause</a>
                         <a href="{% url 'placeholder' %}">Write With Us</a>
+                        <a href="{% url 'placeholder' %}">Eye Witness</a>
                     </div>
                   </div>
 
