--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -104,7 +104,7 @@
 
                
                 <li class="header__menuItem"><a href="{% url 'forum' %}">Forum</a></li>
-
+                <li class="header__menuItem"><a href="{% url 'forum' %}">Petitions</a></li>
             
                 {% if request.user.is_authenticated %}
                 <div class="dropdown">
